# gzSudoku

./: .gitignore  CMakeLists.txt  Commands.txt  README.md  cmds.txt  gzSudoku_vc2015.sln  intel_simd_instuctions.md
clang/: CMakeLists.txt
others/jczslover/: JCZSolve.c  JCZSolve.h
projects/vc2015/gzSudoku/: gzSudoku.vcxproj  gzSudoku.vcxproj.filters
src/gzSudoku/: BasicSolver.h  BasicSolver.hpp  BitArray.h  BitMatrix.h  BitSet.h  BitUtils.h  BitVec.h  CPUWarmUp.h  JCZSolveEx.h  JCZSolveEx_v1.h  JCZSolve_v0.h  JCZSolve_v1.h  JCZSolve_v2.h  JCZSolve_v3.h  JCZSolve_v4.h  JCZSolve_v5.h  JCZSolve_v6.h  PackedBitSet.h  Power2.h  PowerOf2.h  RustSudoku_v1.h  RustSudoku_v1.hpp  StopWatch.h  Sudoku.h  Sudoku.hpp  SudokuMain.cpp  SudokuSolver_v4.h  SudokuSolver_v4a.h  SudokuSolver_v4b.h  SudokuSolver_v5.h  SudokuTable.h  SudokuTable.hpp  SudokuTables.h  TestCase.h  gzSudoku.h  msvc_x86intrin.h  stddef.h
